fix(Cloze with Drag and Drop):  Wordwrap (#874)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -441,6 +441,7 @@ template {
   white-space: inherit;
   text-overflow: ellipsis;
   overflow: hidden;
+  height: 100%;
 }
 
 .imagedragdrop_template_box {
